# NOOR_National-Opportunities-Optimization-Realization-

./: .env  .env.example  .env.mvp  .env.production.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  DEVELOPMENT_WORKFLOW.md  FULL_FRONTEND_DEPLOYED.md  Master_Orchestrator_Status_Report.md  NOOR_API_Keys_Requirements.md  NOOR_Agentic_Architecture.md  NOOR_Final_Deployment_Handover.md  NOOR_MVP_Deliverables_Resources.md  NOOR_Orchestrator_Complete_Status.md  README.md  REPOSITORY_ENVIRONMENT_ANALYSIS.md  test_data.json  test_master_orchestrator.py
backend/: README.md  requirements.txt  vercel.json
docs/: ALL_INTERFACES_COMPLETE.md  API_ARCHITECTURE.md  BACKEND_100_PERCENT_COMPLETE.md  BACKEND_COMPLETION_REPORT.md  COMPLETE_SITEMAP.md  COMPONENT_LIBRARY_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  EIGHT_FACULTY_MODEL_IMPLEMENTATION.md  FEDERAL_INTERFACE_COMPLETE.md  FINAL_DEPLOYMENT_GUIDE_WITH_STRIPE.md  FRONTEND_DEVELOPMENT_STATUS.md  PROJECT_STATUS.md  (+13 more)
noor-platform/backend/: pyproject.toml
noor-platform/backend/agents/master-orchestrator/: Dockerfile  agent.py  api.py  k8s-deployment.yaml
noor-platform/backend/services/: README.md
noor-platform/backend/services/biometric-identity/: Dockerfile  k8s-deployment.yaml  main.py  ml_models.py  pinecone_client.py
noor-platform/backend/services/employee-lifecycle/: Dockerfile  README.md  config.py  database.py  k8s-deployment.yaml  main.py
noor-platform/backend/services/health-certification/: Dockerfile  README.md  k8s-deployment.yaml  main.py  requirements.txt
noor-platform/backend/shared/database/migrations/: 001_initial_schema.sql  002_learning_emiratization_audit.sql
noor-platform/backend/shared/database/mongodb/: 001_engagement_performance_wellness.js  002_learning_content_guilds.js
noor-platform/backend/shared/database/neo4j/: 001_graph_schema.cypher  README.md
noor-platform/backend/shared/database/vectordb/: README.md  pinecone_config.py  vector_operations.py
(+297 files in other folders)
